[gd_scene load_steps=12 format=3 uid="uid://bb2c5mlyg7sy4"]

[ext_resource type="Script" uid="uid://dgwv5xib3on4y" path="res://scripts/devices/heater.gd" id="1_yh6gp"]
[ext_resource type="Script" uid="uid://dtu8fhapwdl1m" path="res://scripts/devices/draggable.gd" id="3_5hecl"]
[ext_resource type="Texture2D" uid="uid://dtrebpgpb5mnh" path="res://assets/devices/egg_heater.png" id="3_68slv"]
[ext_resource type="Texture2D" uid="uid://bkuwou1loylki" path="res://assets/devices/2d_lights_and_shadows_neutral_point_light.webp" id="4_68slv"]
[ext_resource type="AudioStream" uid="uid://5nlusvv7tggr" path="res://assets/audio/Big Fire Loop 001.wav" id="5_08l3b"]
[ext_resource type="AudioStream" uid="uid://b6hgkbiv86fb2" path="res://assets/audio/Big Fire Loop 002.wav" id="6_46tip"]
[ext_resource type="AudioStream" uid="uid://beitjaynagpor" path="res://assets/audio/Heater Cooling Ping.wav" id="6_t4cgb"]
[ext_resource type="AudioStream" uid="uid://wnvakgc2d32y" path="res://assets/audio/Big Fire Loop 003.wav" id="7_j8u46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ycrt"]
size = Vector2(56, 56)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_q1f6a"]
polygon = PackedVector2Array(-25, -25, -25, 25, 25, 25, 25, -25, 27, -27, 27, 27, -27, 27, -27, -27)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rsxbf"]
streams_count = 3
stream_0/stream = ExtResource("5_08l3b")
stream_1/stream = ExtResource("6_46tip")
stream_2/stream = ExtResource("7_j8u46")

[node name="Heater" type="Area2D" groups=["devices"]]
script = ExtResource("1_yh6gp")
intensity = 44.0

[node name="Draggable" type="Node2D" parent="." node_paths=PackedStringArray("area_2d", "outline")]
script = ExtResource("3_5hecl")
area_2d = NodePath("..")
outline = NodePath("../Outline2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("3_68slv")

[node name="Outline2D" type="Line2D" parent="."]
points = PackedVector2Array(-27, -27, 27, -27, 27, 27, -27, 27)
closed = true
width = 2.0
default_color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_8ycrt")

[node name="EggEffectArea2D" type="Area2D" parent="."]
z_index = -2
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Polygon2D" type="Polygon2D" parent="EggEffectArea2D"]
color = Color(1, 0, 0, 0.196078)
polygon = PackedVector2Array(-128, -128, -26, -24, 26, -24, 128, -128)
vertex_colors = PackedColorArray(1, 0.470588, 0.388235, 0, 1, 0.47451, 0.388235, 1, 1, 0.47451, 0.388235, 1, 1, 0.471333, 0.39, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EggEffectArea2D"]
visible = false
polygon = PackedVector2Array(26, -24, 128, -128, -128, -128, -26, -24)

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 1, 0.803922, 1)
energy = 0.5
texture = ExtResource("4_68slv")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_q1f6a")

[node name="HeaterAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_rsxbf")
volume_db = -16.0
max_distance = 60.0

[node name="HeaterSwitchAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_t4cgb")

[node name="HoverPanelContainer" type="PanelContainer" parent="."]
visible = false
z_index = 5
offset_left = 38.0
offset_top = -38.0
offset_right = 180.0
offset_bottom = 39.0
metadata/_edit_group_ = true

[node name="BoxContainer" type="BoxContainer" parent="HoverPanelContainer"]
layout_mode = 2
vertical = true

[node name="NameLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
layout_mode = 2
text = "Heater"

[node name="DescriptionLabel2" type="Label" parent="HoverPanelContainer/BoxContainer"]
layout_mode = 2
text = "Emits heat to eggs"

[node name="IntensityLabel" type="Label" parent="HoverPanelContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Intensity: 65"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="finished" from="HeaterAudioPlayer" to="." method="_on_heater_audio_player_finished"]
